--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Bike Trackers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -112,7 +112,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Bike Trackers</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -133,21 +133,21 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>INTEGRATED BIKE TRACKERS</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">GPS Tracking devices for motorcycles and bicycles.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
-        </div>
-
+          <img class="img-polaroid" src="http://i.imgur.com/ZCeb46t.jpg?1">        
+	</div>
+	
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
           <div class="span8 offset2">
@@ -157,17 +157,17 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>1000</h3> <p>backers</p>
+                <h3>1</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$0</h3> <p>of $100</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>10</h3> <p>days left</p>
+                <h3>50</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -200,45 +200,42 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
-The page at https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html displayed insecure content from http://placehold.it/480x300.
+          <img class="img-polaroid" src="http://i.imgur.com/4EJ3SpY.jpg?1">
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
+	    Spybike bicycle trackers are covert GPS devices that hide on 
+	    your bike. Arm them when you lock your bike and they will notify 
+	    you if someone moves it.<br><br>You can then track your bike 
+	    <b>online</b> or on your <b>phone</b> and find out where it has 
+	    gone using our free realtime tracking service. Don't let the 
+	    thieves get away with you pride and joy!<br><br>Coming Soon. 
+	    Pre-pay global SIM card! We offer a low prepay rate of 3.50/month. 
+	    You can top up as little or as much as you like.
+          </P>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	    You will need a SIM card for your tracker. The tracker will 
+	    use this SIM to send you SMS text messages and to report its 
+	    position online. If your tracker did not come with a SIM plan, 
+	    it is best to select a low cost pay-as-you-go SIM plan if these 
+	    are available. Make sure the SIM is on a network that support 2G. 
+	    Almost all networks do however there are a few 3G-only networks 
+	    that only support 3G. (These are rare. "Three" in the UK and 
+	    Ireland is one such network.) Most networks support but 2G and 3G.
+	    <br><br>Before using the SIM in the tracker. Please test it first 
+	    in a mobile phone to ensure that it can send and receive SMS text 
+	    messages OK. If your SIM has a PIN code, please remove this with 
+	    your mobile phone. Please also ensure that you have good network 
+	    connectivity.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
-The page at https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html displayed insecure content from http://placehold.it/480x300.
+          <img class="img-polaroid" src="http://i.imgur.com/eExfLIN.jpg?1">
         </div>
       </div>
 
